### Added - Added open button in options page to open scheduled tabs immediately. - Updated options page icon.
### Fixed
- Fixed defect where repeating scheduled tabs would open on every change to scheduled tabs.
- Scheduled tabs will now repeatedly open only if it has first opened at its initially scheduled time.
- Truncated long URLs in tab cycle configuration table in options page and make them expandable.
- Adjusted layout of scheduled tabs table in popup.
- Improved "open next" info text for scheduled tabs in popup.

--- a/options.css
+++ b/options.css
@@ -5,7 +5,7 @@ body {
     margin: auto;
     background: #f9f9f9;
     color: #333;
-
+    overflow-x: auto; /* Enables horizontal scrolling */
 }
 
 header {
@@ -240,6 +240,11 @@ input[type="url"], input[type="text"], input[type="time"], input[type="number"] 
     color: white;
     z-index: 2;
 }
+
+#tab-intervals-container {
+    table-layout: fixed;
+    width: 100%;
+  }
 
 @keyframes fadeSlideUp {
     0% {
